[gd_scene load_steps=5 format=3 uid="uid://ck16vkvk68bm7"]

[ext_resource type="Script" path="res://pickups/pickup.gd" id="1_s2pyg"]
[ext_resource type="PackedScene" uid="uid://160fnxuwnj2u" path="res://box.blend" id="2_uwt1r"]

[sub_resource type="SphereShape3D" id="SphereShape3D_au0w5"]
radius = 0.15

[sub_resource type="BoxShape3D" id="BoxShape3D_ewus5"]
size = Vector3(0.1, 0.1, 0.1)

[node name="Pickup" type="Node3D" groups=["camera_tracking"]]
script = ExtResource( "1_s2pyg" )

[node name="Mesh" parent="." instance=ExtResource( "2_uwt1r" )]
transform = Transform3D(1.31134e-08, 0, -0.1, 0, 0.1, 0, 0.1, 0, 1.31134e-08, 0, 0, 0)

[node name="PickupArea" type="Area3D" parent="."]

[node name="PickupHitbox" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource( "SphereShape3D_au0w5" )

[node name="CollisionArea" type="Area3D" parent="."]
monitoring = false

[node name="CollisionHitbox" type="CollisionShape3D" parent="CollisionArea"]
shape = SubResource( "BoxShape3D_ewus5" )

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
